# code-cursor-refactor

./: pyproject.toml
_handoff/: 00-START-HERE.md  context-summary.md  decision-log.md  session-end.md  status-snapshot.md
_tools/: README.md
_tools/kits/: CHANGELOG.md  README.md
_tools/kits/audit-kit/: ANTI-GAMING-MEASURES.md  AUDIT-CONSTITUTION.md  AUDIT-RULES.md  HOW-TO-PLAN-AN-AUDIT.md  HOW-TO-RUN-AN-AUDIT.md  README.md
_tools/kits/handoff-kit/: HANDOFF-CONSTITUTION.md  HANDOFF-PROTOCOLS.md  HOW-TO-PLAN-A-HANDOFF.md  README.md
_tools/kits/repair-kit/: ANTI-REGRESSION-MEASURES.md  FIX-RULES.md  HOW-TO-PLAN-A-FIX.md  HOW-TO-RUN-A-FIX.md  README.md  REPAIR-CONSTITUTION.md
_tools/playbook/: 01-architecture-patterns.md  02-refactoring-workflow.md  03-quality-gates.md  README.md
_tools/playbook/04-decision-records/: ADR-001-controller-pattern.md  README.md
codes/Config/: __init__.py  param.py  path.py
codes/Config/_param/: __init__.py  base.py  pose.py  report.py  schema.py  scored.py  shared.py  sleap.py  tracked.py
codes/Config/_path/: __init__.py  discovery.py  filename_policy.py  folders.py  name_builders.py  path_builders.py  report.py  roots.py  transforms.py
plans/classifier-refactor/: README.md
plans/classifier-refactor/00-analysis/: complexity-hotspots.md  dependencies.md  discoveries.md  pipeline-diagram.md  structure.md
plans/classifier-refactor/01-decisions/: README.md
plans/config-refactor/04-path/: PLANNING_COMPLETE.md  README.md  analysis.md  decisions.md  implementation-plan.md  validation-checklist.md
(+20 files in other folders)
